package yal.arbre.expressions;

public class ExpressionBinaire {
}
